# AlgorithmServer-North-Driver-for-NEURON

./: .clang-format  CMakeLists.txt  algorithm.c  algorithm.h  algorithm.json  run.sh
http_client/: http_client.c  http_client.h
service/: service.c  service.h
utils/: utils.c  utils.h
